k8s/reviews/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: reviews
  namespace: sa-p5
  labels:
    app: reviews
spec:
  replicas: 2
  selector:
    matchLabels:
      app: reviews
  template:
    metadata:
      labels:
        app: reviews
    spec:
      containers:
        - name: reviews
          image: docker.io/zenthic22/reviews:v1
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 5002
              name: http
          readinessProbe:
            httpGet: { path: /healthz, port: http }
            initialDelaySeconds: 5
            periodSeconds: 5
          livenessProbe:
            httpGet: { path: /healthz, port: http }
            initialDelaySeconds: 15
            periodSeconds: 10
          resources:
            requests:
              cpu: "100m"
              memory: "128Mi"
            limits:
              cpu: "300m"
              memory: "256Mi"
      imagePullSecrets:
        - name: regcred
