k8s/reviews/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: reviews
  namespace: sa-p5
spec:
  selector:
    app: reviews
  ports:
    - name: http
      port: 5002
      targetPort: http
  type: ClusterIP
